New components added, responsived design done for some components and also added images

--- a/src/assests/styles/variable.scss
+++ b/src/assests/styles/variable.scss
@@ -5,6 +5,7 @@ $white_background_color: #fff;
 // Text Colors
 $white_text_color: #fff;
 $black_text_color: #000;
+$grey_text_color: #757575;
 
 // colors
 $primary_light_color: #5bc8af;
